--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
       "logo" : "http://assets.app.netuitive.com/pkg/logo/netuitive/banner_logo.png",
       "download" : "https://github.com/netuitive-community-packages/netuitive-packages-azure-vm/archive/master.zip"
     },
-    "compatibility" : [ "Azure:VM" ],
+    "compatibility" : [ "Azure:VirtualMachine" ],
     "tags" : [ ],
     "checksum" : null
   },
